--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:background="@color/clean_trash_bg"
+                android:fitsSystemWindows="true"
                 android:orientation="vertical">
 
 
@@ -12,44 +14,83 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btn_ignore"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="跳转白名单"/>
+        <include layout="@layout/common_action_bar_without_search"/>
 
-        <TextView
-            android:id="@+id/tv_chosen_size"
+        <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="120dp">
+
+            <TextView
+                android:id="@+id/tv_trash_size_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:textColor="@color/white"
+                android:textSize="48dp"
+                tools:text="328"/>
+
+            <TextView
+                android:id="@+id/tv_trash_size_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="115dp"
+                android:layout_marginStart="115dp"
+                android:layout_marginTop="40dp"
+                android:text="MB"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/tv_trash_suggest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_trash_size_unit"
+                android:layout_marginLeft="115dp"
+                android:layout_marginStart="115dp"
+                android:text="MB"
+                android:textColor="@color/white"/>
+
+            <ProgressBar
+                android:layout_alignParentBottom="true"
+                android:id="@+id/pb_scan_progress"
+                style="@style/StyleProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:progress="0"/>
+
+        </RelativeLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:id="@+id/btn_ignore"
             android:layout_height="wrap_content"
-            android:text="0B has been chosen"/>
+            android:text="跳转白名单"
+            android:visibility="gone"/>
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_trash_path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="  "/>
 
-        <TextView
-            android:id="@+id/tv_scan_progress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="0% has done"/>
-
         <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
             android:id="@+id/clean_trash_expandable_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:divider="@null"
+            android:background="@color/white"
             android:groupIndicator="@null"
             android:listSelector="@android:color/transparent"
             android:scrollbars="none"/>
     </LinearLayout>
 
-    <com.jb.filemanager.ui.view.TranslateImageView
+    <ImageView
         android:id="@+id/iv_clean_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/trash_clean_icon"
+        android:layout_marginBottom="40dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:tag="image_share"/>
