--- a/app/src/main/res/layout/item_clean_trash_child.xml
+++ b/app/src/main/res/layout/item_clean_trash_child.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="70dp"
-              android:minHeight="70dp"
+              android:layout_height="60dp"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:minHeight="60dp"
               android:orientation="vertical">
 
     <RelativeLayout
@@ -10,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@drawable/ic_drawer_about">
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/item_child_indivator"
@@ -24,63 +25,53 @@
 
         <ImageView
             android:id="@+id/item_child_iv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:scaleType="fitXY"
+            tools:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:contentDescription="@null"/>
 
         <TextView
             android:id="@+id/item_child_name"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="70dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginLeft="68dp"
             android:ellipsize="middle"
             android:ems="10"
+            tools:text="@string/app_name"
             android:singleLine="true"
-            android:textColor="#333333"
-            android:textSize="16sp"/>
+            android:textColor="@color/black_70"
+            android:textSize="14dp"/>
+
+        <TextView
+            android:id="@+id/item_child_size"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="68dp"
+            android:ellipsize="middle"
+            android:ems="10"
+            tools:text="@string/app_name"
+            android:singleLine="true"
+            android:textColor="@color/black_40"
+            android:textSize="14dp"/>
 
         <com.jb.filemanager.commomview.GroupSelectBox
             android:id="@+id/item_child_select_button"
-            android:layout_width="48dp"
+            android:layout_width="44dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:contentDescription="@null"
-            android:paddingLeft="12dp"
+            android:paddingLeft="16dp"
             android:paddingRight="12dp"
             android:paddingTop="22dp"
             android:paddingBottom="22dp"
             android:src="@drawable/choose_part"/>
 
-        <TextView
-            android:id="@+id/item_child_size_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="50dp"
-            android:textColor="#999999"
-            android:textSize="12dp"/>
-
-        <TextView
-            android:id="@+id/item_child_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:layout_toLeftOf="@id/item_child_size_unit"
-            android:textColor="#666666"
-            android:textSize="16dp"/>
     </RelativeLayout>
-
-    <View
-        android:id="@+id/item_trash_child_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_marginLeft="70dp"
-        android:background="#cccccc"/>
 </LinearLayout>
