--- a/app/src/main/res/layout/item_clean_trash_group.xml
+++ b/app/src/main/res/layout/item_clean_trash_group.xml
@@ -3,72 +3,57 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="54dp"
-    android:minHeight="54dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="41dp"
+    android:minHeight="41dp"
+    tools:background="@color/colorAccent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <com.jb.filemanager.ui.view.ShaderLine
-        android:id="@+id/item_group_top_shader"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="#cccccc"
-        android:clickable="true"/>
+        android:layout_height="1dp"
+        android:background="@color/list_divider_line_color"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="#ffffff"
-        android:minHeight="46dp">
-
-        <ImageView
-            android:id="@+id/item_group_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="26dp"
-            android:contentDescription="@null"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/item_group_name"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="70dp"
-            android:ellipsize="middle"
-            android:ems="10"
-            android:gravity="left"
-            android:lines="1"
-            android:textColor="#333333"
-            android:textSize="16dp"/>
-
-        <TextView
-            android:id="@+id/item_group_size_unit"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="50dp"
-            android:text="B"
-            android:textColor="#666666"
-            android:textSize="16dp"/>
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/black"
+            android:textSize="12dp"
+            tools:text="Big Files"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/item_group_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="6dp"
-            android:layout_toLeftOf="@id/item_group_size_unit"
-            android:text="0.00"
-            android:textColor="#666666"
-            android:textSize="16dp"/>
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/clean_trash_bg"
+            android:textSize="12dp"
+            tools:text="(234MB)"/>
 
         <com.jb.filemanager.commomview.ProgressWheel
             android:id="@+id/item_group_pb"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:padding="12dp"
             android:visibility="visible"
             wheel:matProg_barColor="#0084ff"
@@ -77,20 +62,13 @@
 
         <com.jb.filemanager.commomview.GroupSelectBox
             android:id="@+id/item_group_iv_select"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:contentDescription="@null"
             android:padding="12dp"
             android:src="@drawable/choose_all"
             android:visibility="gone"/>
-    </RelativeLayout>
-
-    <com.jb.filemanager.ui.view.ShaderLine
-        android:id="@+id/item_group_bottom_shader"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="#cccccc"
-        android:clickable="false"/>
+    </LinearLayout>
 </LinearLayout>
