--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,17 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="transparent">#00000000</color>
+    <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="white_50">#7FFFFFFF</color>
+    <color name="white_20">#33ffffff</color>
+    <color name="white_60">#99ffffff</color>
+    <color name="white_80">#ccffffff</color>
+    <color name="white_10">#19ffffff</color>
+    <color name="white_8">#14ffffff</color>
+    <color name="white_5">#0Cffffff</color>
+    <color name="black_40">#66000000</color>
 
 
     <!-- about -->
@@ -32,4 +41,7 @@
     <color name="power_saving_dialog_title">#434A54</color>
     <color name="power_saving_menu_item_normal">#FFFFFFFF</color>
     <color name="power_saving_menu_item_pressed">#FFEDEDED</color>
+    <color name="clean_trash_bg">#FFFF7D7D</color>
+    <color name="list_divider_line_color">#e7e9f3</color>
+    <color name="black_70">#B2000000</color>
 </resources>
