--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -12,18 +12,203 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginRight="9dp"
         android:numColumns="3"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
+        android:verticalSpacing="3dp"
+        android:horizontalSpacing="3dp"
         android:stretchMode="columnWidth"
         android:gravity="center"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="9dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginTop="9dp"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <TextView
+                android:id="@+id/tv_main_category_info_storage_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:drawableLeft="@drawable/ic_main_phone"
+                android:drawableStart="@drawable/ic_main_phone"
+                android:textColor="#B2000000"
+                android:textSize="10dp"
+                android:text="@string/main_info_phone_storage"/>
+
+            <TextView
+                android:id="@+id/tv_main_category_info_storage_used"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="#66000000"
+                android:textSize="10dp"/>
+
+            <TextView
+                android:id="@+id/tv_main_category_info_storage_unused"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textColor="#66000000"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:textSize="10dp"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:background="@drawable/main_category_info_switch_track">
+
+                <TextView
+                    android:id="@+id/tv_main_category_info_switch_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/main_category_info_switch_thumb_selector"
+                    android:textSize="8dp"
+                    android:textColor="@color/main_category_info_switch_text_color_selector"
+                    android:text="@string/main_info_switch_phone"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_info_switch_sdcard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/main_category_info_switch_thumb_selector"
+                    android:textSize="8dp"
+                    android:textColor="@color/main_category_info_switch_text_color_selector"
+                    android:text="@string/main_info_switch_sdcard"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <com.jb.filemanager.ui.view.UsageAnalysis
+            android:id="@+id/ua_main_category_info_usage_analysis"
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_main_category_info_usage_analysis"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_main_category_info_photo"
+                android:drawableStart="@drawable/ic_main_category_info_photo"
+                android:drawablePadding="4dp"
+                android:textColor="#66000000"
+                android:textSize="12dp"
+                android:text="@string/main_info_photo"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_main_category_info_music"
+                android:drawableStart="@drawable/ic_main_category_info_music"
+                android:drawablePadding="4dp"
+                android:textColor="#66000000"
+                android:textSize="12dp"
+                android:text="@string/main_info_music"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_main_category_info_video"
+                android:drawableStart="@drawable/ic_main_category_info_video"
+                android:drawablePadding="4dp"
+                android:textColor="#66000000"
+                android:textSize="12dp"
+                android:text="@string/main_info_video"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_main_category_info_docs"
+                android:drawableStart="@drawable/ic_main_category_info_docs"
+                android:drawablePadding="4dp"
+                android:textColor="#66000000"
+                android:textSize="12dp"
+                android:text="@string/main_info_docs"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_main_category_info_apps"
+                android:drawableStart="@drawable/ic_main_category_info_apps"
+                android:drawablePadding="4dp"
+                android:textColor="#66000000"
+                android:textSize="12dp"
+                android:text="@string/main_info_apps"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_main_category_info_other"
+                android:drawableStart="@drawable/ic_main_category_info_other"
+                android:drawablePadding="4dp"
+                android:textColor="#66000000"
+                android:textSize="12dp"
+                android:text="@string/main_info_other"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_gravity="bottom"
-        android:text="category"
-        android:textColor="#000000"
-        android:textSize="20dp" />
+        android:id="@+id/tv_main_category_clear_trash"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginRight="9dp"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:textColor="#FFFFFF"
+        android:background="#39BDAC"/>
 
 </LinearLayout>
