--- a/app/src/main/res/layout/item_main_category.xml
+++ b/app/src/main/res/layout/item_main_category.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="ContentDescription,SpUsage,HardcodedText"
+    tools:ignore="ContentDescription,HardcodedText,SpUsage,UseCompoundDrawables"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="111dp"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_main_category_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_marginTop="21dp"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/tv_main_category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="1dp"
-        android:textColor="#123456"
-        android:textSize="16dp" />
-
-    <TextView
-        android:id="@+id/tv_main_category_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:textColor="#123456"
-        android:textSize="16dp" />
+        android:layout_marginTop="9dp"
+        android:textColor="#B2000000"
+        android:textStyle="bold"
+        android:textSize="12dp" />
 
 </LinearLayout>
