--- a/app/src/main/res/layout/common_operate_bar.xml
+++ b/app/src/main/res/layout/common_operate_bar.xml
@@ -1,57 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     >
-
-    <TextView
-        android:id="@+id/tv_common_operate_bar_cut"
-        android:layout_width="0dp"
+    <LinearLayout
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:drawableTop="@drawable/ic_drawer_about"
-        android:drawablePadding="3dp"
-        android:text="@string/cut"
-        android:textColor="#FFFFFF"
-        android:textSize="16dp"/>
-
-    <TextView
-        android:id="@+id/tv_common_operate_bar_copy"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:drawableTop="@drawable/ic_drawer_setting"
-        android:drawablePadding="3dp"
-        android:text="@string/copy"
-        android:textColor="#FFFFFF"
-        android:textSize="16dp"/>
+        android:orientation="vertical"
+        android:background="@drawable/botttom_item_selector"
+        android:paddingTop="10dp"
+        >
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_bottom_cut"
+            />
+        <TextView
+            android:id="@+id/tv_common_operate_bar_cut"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/cut"
+            android:lines="1"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_common_operate_bar_delete"
-        android:layout_width="0dp"
+    <LinearLayout
         android:layout_height="match_parent"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:drawableTop="@drawable/ic_drawer_feedback"
-        android:drawablePadding="3dp"
-        android:text="@string/delete"
-        android:textColor="#FFFFFF"
-        android:textSize="16dp"/>
+        android:orientation="vertical"
+        android:background="@drawable/botttom_item_selector"
+        android:paddingTop="10dp"
+        >
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_bottom_copy"
+            android:layout_gravity="center_horizontal"
+            />
+        <TextView
+            android:id="@+id/tv_common_operate_bar_copy"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:background="@drawable/botttom_item_selector"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/copy"
+            android:lines="1"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_common_operate_bar_more"
-        android:layout_width="0dp"
+    <LinearLayout
         android:layout_height="match_parent"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:drawableTop="@drawable/ic_operate_bar_more"
-        android:drawablePadding="3dp"
-        android:text="@string/more"
-        android:textColor="#FFFFFF"
-        android:textSize="16dp"/>
+        android:orientation="vertical"
+        android:background="@drawable/botttom_item_selector"
+        android:paddingTop="10dp"
+        >
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_bottom_delete"
+            android:layout_gravity="center_horizontal"
+            />
+        <TextView
+            android:id="@+id/tv_common_operate_bar_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/delete"
+            android:lines="1"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:background="@drawable/botttom_item_selector"
+        android:paddingTop="10dp"
+        >
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_bottom_more"
+            android:layout_gravity="center_horizontal"
+            android:background="#00000000"
+            />
+
+        <TextView
+            android:id="@+id/tv_common_operate_bar_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/more"
+            android:lines="1"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            android:background="#"
+            />
+    </LinearLayout>
+
 
 </merge>
