--- a/app/src/main/res/layout/dialog_main_sort.xml
+++ b/app/src/main/res/layout/dialog_main_sort.xml
@@ -8,25 +8,24 @@
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="#fc6f5b"
-        android:textSize="18dp"
-        android:text="Sort by"/>
-
-    <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="#cccccc"/>
+        android:layout_height="24dp"
+        android:layout_gravity="start"
+        android:layout_marginTop="21dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:text="@string/dialog_sort_by_title"/>
 
     <RadioGroup
         android:id="@+id/rg_main_sort_by"
-        android:background="#FFFFFF"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:orientation="vertical">
 
         <RadioButton
             android:id="@+id/rb_main_sort_by_name"
