--- a/app/src/main/res/layout/item_zip_file.xml
+++ b/app/src/main/res/layout/item_zip_file.xml
@@ -1,69 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:minHeight="60dp"
-                android:orientation="horizontal">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/item_zip_icon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:contentDescription="@null"/>
-
-    <TextView
-        android:id="@+id/item_zip_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="14dp"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:textColor="#b3000000"
-        android:textSize="14dp"/>
-
-    <TextView
-        android:id="@+id/item_zip_size"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/item_zip_name"
-        android:layout_alignStart="@id/item_zip_name"
-        android:layout_below="@id/item_zip_name"
-        android:textColor="#66000000"
-        android:textSize="10dp"/>
-
-    <ImageView
-        android:id="@+id/item_zip_checkbox"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:contentDescription="@null"
-        android:padding="12dp"/>
-
-    <View
-        android:id="@+id/item_zip_divider"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="68dp"
-        android:layout_marginStart="68dp"
-        android:background="#f5f6ff"/>
+        android:layout_height="60dp"
+        android:minHeight="60dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/item_zip_icon"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:contentDescription="@null"/>
+
+        <TextView
+            android:id="@+id/item_zip_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="50dp"
+            android:layout_marginLeft="68dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="14dp"
+            android:ellipsize="marquee"
+            android:singleLine="true"
+            android:textColor="#b3000000"
+            android:textSize="14dp"/>
+
+        <TextView
+            android:id="@+id/item_zip_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/item_zip_name"
+            android:layout_alignStart="@id/item_zip_name"
+            android:layout_below="@id/item_zip_name"
+            android:textColor="#66000000"
+            android:textSize="10dp"/>
+
+        <ImageView
+            android:id="@+id/item_zip_checkbox"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:contentDescription="@null"
+            android:padding="12dp"/>
+
+        <View
+            android:id="@+id/item_zip_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="68dp"
+            android:layout_marginStart="68dp"
+            android:background="#f5f6ff"/>
+
+    </RelativeLayout>
 
     <View
         android:id="@+id/item_zip_wide_divider"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_alignParentBottom="true"
         android:background="#f5f6ff"
         android:visibility="gone"/>
-</RelativeLayout>
+</LinearLayout>
